// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FadeCard changes the class when hovered 1`] = `
<div
  className="py-2 col-xs-12 col-md-6 col-lg-6"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "inline-flex",
      }
    }
  >
    <i
      aria-hidden="true"
      className="fa fa-2x fa-github"
      style={
        Object {
          "color": "#f00",
          "transition": "color 2s linear 1s",
        }
      }
    />
    <span
      className="text-uppercase"
      style={
        Object {
          "fontSize": "20px",
          "marginLeft": "10px",
        }
      }
    >
      Hello
    </span>
  </div>
  <p>
    test
  </p>
</div>
`;

exports[`FadeCard changes the class when hovered 2`] = `
<div
  className="py-2 col-xs-12 col-md-6 col-lg-6"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "inline-flex",
      }
    }
  >
    <i
      aria-hidden="true"
      className="fa fa-2x fa-github"
      style={
        Object {
          "color": "white",
          "transition": "color 2s linear 1s",
        }
      }
    />
    <span
      className="text-uppercase"
      style={
        Object {
          "fontSize": "20px",
          "marginLeft": "10px",
        }
      }
    >
      Hello
    </span>
  </div>
  <p>
    test
  </p>
</div>
`;

exports[`FadeCard changes the class when hovered 3`] = `
<div
  className="py-2 col-xs-12 col-md-6 col-lg-6"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "inline-flex",
      }
    }
  >
    <i
      aria-hidden="true"
      className="fa fa-2x fa-github"
      style={
        Object {
          "color": "#f00",
          "transition": "color 2s linear 1s",
        }
      }
    />
    <span
      className="text-uppercase"
      style={
        Object {
          "fontSize": "20px",
          "marginLeft": "10px",
        }
      }
    >
      Hello
    </span>
  </div>
  <p>
    test
  </p>
</div>
`;
